<resources>
    <string name="app_name">AndroidPv211</string>

    <string name="main_tv_title">Знайомство з Android</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_rates">Курси валют</string>
    <string name="main_btn_anim">Анімації</string>
    <string name="main_btn_chat">Чат</string>

    <string name="chat_tv_title">Теревеньки</string>
    <string name="chat_tv_author">Автор:</string>
    <string name="chat_author_hint">Ваш нік у чаті</string>
    <string name="chat_author_remember">Зберегти</string>
    <string name="chat_send_hint">Надіслати повідомлення</string>
    <string name="chat_message_hint">Введіть повідомлення</string>
    <string name="chat_content_hint">Останні повідомлення</string>
    <string name="chat_msg_no_author">Введіть ваш нік</string>
    <string name="chat_msg_no_text">Введіть повідомлення</string>
    <string name="chat_msg_no_send">Надсилання зупинене</string>
    <string name="chat_msg_no_send_btn">Зрозуміло</string>


    <string name="anim_tv_title">Анімації</string>
    <string name="anim_tv_alpha">Прозорість</string>
    <string name="anim_tv_rotate">Поворот</string>
    <string name="anim_tv_scale">Масштаб</string>


    <!-- region Rates -->
    <string name="rates_tv_title">Курси валют від НБУ</string>
    <!-- endregion  -->


    <!-- region Calc -->
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_sqr">&#x1D465;\u00B2</string>
    <string name="calc_btn_sqrt">\u221A&#x1D465;\u0305</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_inv">1/x</string>
    <string name="calc_btn_div">/</string>
    <string name="calc_btn_mul">*</string>
    <string name="calc_btn_sub">-</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_eq">=</string>
    <string name="calc_btn_dot">.</string>
    <string name="calc_btn_pm">+-</string>
    <string name="calc_btn_percent">%</string>
    <!-- endregion  -->

</resources>