<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/chat_tv_title"
        android:textColor="@color/rates_text_fg"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/chat_tv_author"/>
        <EditText
            android:id="@+id/chat_et_author"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/chat_author_hint"
            android:inputType="text"
            android:textColor="@color/rates_text_fg"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_rv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/chat_content_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/chat_et_message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints=""
            android:hint="@string/chat_message_hint"
            android:inputType="text"
            android:textColor="@color/rates_text_fg"/>
        <ImageButton
            android:id="@+id/chat_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chat_send_hint"
            android:src="@android:drawable/ic_menu_send"/>
    </LinearLayout>
</LinearLayout>